fix text with &nbsp; breaking the overflow of the container

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -416,3 +416,10 @@
     flex-wrap: nowrap !important;
   }
 }
+
+// FIX NBSP ISSUE
+.say-content,
+.au-c-editor-preview {
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
